# physics_sim

./: README.md  pyproject.toml
example/: orbital_system.py  projectile_motion.py  three_body_problem.py
src/physics_sim/: body.py  solver.py  system.py
src/physics_sim.egg-info/: PKG-INFO  SOURCES.txt
src/physics_sim/mechanics/: field.py
